force-app/main/default/objects/Monday_Task__c/Monday_Task__c.object-meta.xml
<CustomObject>
    <description>Stores the Monday task</description>
    <label>Monday Task</label>
    <nameField>
        <label>Monday Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monday Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>