force-app/main/default/objects/Monday_Task__c/fields/Board_Id__c.field-meta.xml
<CustomField>
    <fullName>Board_Id__c</fullName>
    <label>Board_Id__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>