force-app/main/default/objects/Monday_Task__c/fields/Monday_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Monday_Task_Id__c</fullName>
    <description>Monday Task ID</description>
    <externalId>true</externalId>
    <label>Monday_Task_Id__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>